Added loading icon that shows during the query process. Error message is result is empty or there was no input.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Pillbox Test Demo</string>
-
+    <string name="rxcui_search_error">An error occurred. Check your internet connection, or make sure you have entered proper data.</string>
 </resources>
