app now accepts a keyword, and calls the /rxcui part of the api to search for number, then calls the /interactions and searches for interactions using that number. Now displays some of the data in sorted UI-friendly format. Also puts visibility methods into void functions in the java code.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Pillbox Test Demo</string>
-    <string name="rxcui_search_error">An error occurred. Check your internet connection, or make sure you have entered proper data.</string>
+    <string name="search_error">An error occurred. Check your internet connection, or make sure you have entered proper data.</string>
+    <string name="search_hint">Type in a Keyword</string>
 </resources>
